--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="col-sm-4">
               <div class="offer-post text-center animated out" data-animation="fadeInLeft" data-delay="0">
                 <div class="offer-icon">
-                  <span class="icon-desktop"></span>
+                  <span class="icon-presentation"></span>
                 </div>
                 <h4>FINANCE</h4>
                 <p>Mauris eros tortor, tristique cursus porttitor et, luctus sed urna. Quisque id libero risus. Aliquam accumsan erat id sem placerat tempus.</p>
@@ -232,7 +232,7 @@
           <div class="title-section text-center animated out" data-animation="fadeInUp" data-delay="10">
             <div class="row">
               <div class="col-sm-8 col-sm-offset-2">
-                <h2>What we do?</h2>
+                <h2> <a href="https://www.positrust.com/what-we-do" target="_blank">What we do? </a> </h2>
                 <hr>
                 <p>Seamlessly restore client-focused potentialities rather than functional strategic theme areas.</p>
               </div> <!-- edn col-sm-8 -->
@@ -277,7 +277,7 @@
                     <div class="left-features-box animated out" data-animation="fadeInLeft" data-delay="2">
                       <span class="iconbox"><i class="icon-hotairballoon "></i></span>
                       <div class="features-box-content">
-                        <h6>WhiteGlove Build</h6>
+                        <h6> Distributed Ledger</h6>
                         <p>Mauris eros tortor, tristique cursus porttitor et, luctus sed urna.</p>
                       </div> <!-- end features-box-content -->
                     </div> <!-- end left-features-box -->
@@ -287,7 +287,7 @@
                     <div class="left-features-box animated out" data-animation="fadeInLeft" data-delay="0">
                       <span class="iconbox"><i class="icon-lightbulb"></i></span>
                       <div class="features-box-content">
-                        <h6>Distributed Ledger</h6>
+                        <h6>WhiteGlove Build</h6>
                         <p>Mauris eros tortor, tristique cursus porttitor et, luctus sed urna.</p>
                       </div> <!-- end features-box-content -->
                     </div> <!-- end left-features-box -->
@@ -423,8 +423,6 @@
                       <p>We’ll etch your brand onto tangible objects: business cards, ads, stickers, brochures, you name it. You won’t see business cards, ads, stickers, brochures anything until we’re done drooling at the result.</p>
                       <ul class="social-icons">
 
-                        <li><a data-rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="bottom" data-title="Facebook" href="#" data-original-title="" title=""><i class="fa fa-facebook"></i></a></li>
-
                         <li><a data-rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="bottom" data-title="Twitter" href="#" data-original-title="" title=""><i class="fa fa-twitter"></i></a></li>
 
                         <li><a data-rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="bottom" data-title="LinkedIn" href="#" data-original-title="" title=""><i class="fa fa-linkedin"></i></a></li>
@@ -448,11 +446,9 @@
                       <p>We’ll etch your brand onto tangible objects: business cards, ads, stickers, brochures, you name it. You won’t see business cards, ads, stickers, brochures anything until we’re done drooling at the result.</p>
                       <ul class="social-icons">
 
-                        <li><a data-rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="bottom" data-title="Facebook" href="#" data-original-title="" title=""><i class="fa fa-facebook"></i></a></li>
-
                         <li><a data-rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="bottom" data-title="Twitter" href="#" data-original-title="" title=""><i class="fa fa-twitter"></i></a></li>
 
-                        <li><a data-rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="bottom" data-title="Google Plus" href="#" data-original-title="" title=""><i class="fa fa-google-plus"></i></a></li>
+                        <li><a data-rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="bottom" data-title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/lenah-mukai-a46961b3/" data-original-title="" title=""><i class="fa fa-linkedin"></i></a></li>
 
                         <li><a data-rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="bottom" data-title="Skype" href="#" data-original-title="" title=""><i class="fa fa-skype"></i></a></li>
 
@@ -473,11 +469,9 @@
                       <p>We’ll etch your brand onto tangible objects: business cards, ads, stickers, brochures, you name it. You won’t see business cards, ads, stickers, brochures anything until we’re done drooling at the result.</p>
                       <ul class="social-icons">
 
-                        <li><a data-rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="bottom" data-title="Facebook" href="#" data-original-title="" title=""><i class="fa fa-facebook"></i></a></li>
-
                         <li><a data-rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="bottom" data-title="Twitter" href="#" data-original-title="" title=""><i class="fa fa-twitter"></i></a></li>
 
-                        <li><a data-rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="bottom" data-title="Google Plus" href="#" data-original-title="" title=""><i class="fa fa-google-plus"></i></a></li>
+                        <li><a data-rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="bottom" data-title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/charlesotienopr/" data-original-title="" title=""><i class="fa fa-linkedin"></i></a></li>
 
                         <li><a data-rel="tooltip" data-toggle="tooltip" data-trigger="hover" data-placement="bottom" data-title="Skype" href="#" data-original-title="" title=""><i class="fa fa-skype"></i></a></li>
 
@@ -538,7 +532,7 @@
           <div class="row">
             <div class="col-sm-6 features-app-content-left animated out" data-animation="fadeInLeft" data-delay="0">
               <div class="section_header">
-                <h2>Simple. Intuitive. <span>Powerful.</span></h2> 
+                <h2>Transformative. Reliable. <span>Secure.</span></h2> 
               </div> <!-- End section_header -->
                 <p> Lorem ipsum <span>dolor</span> sit amet, consectetur adipisicing elit.Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
@@ -745,21 +739,21 @@
                     <li>
                       <img src="assets/images/temp/client-photo.jpg" alt="">
                       <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusultricies porta posuere.</p>
-                      <div class="testimonials-author"> Nelly Arsey - Front End Developer </div>
+                      <div class="testimonials-author"> Nelly Arsey</div>
                     </li>
                     
                     <!-- Testimonial -->
                     <li>
                       <img src="assets/images/temp/client-photo.jpg" alt="">
                       <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusultricies porta posuere <a href="#">http://goo.gl/1OhxkS</a>.</p>
-                      <div class="testimonials-author">Jason Robert -  Web Developer</div>
+                      <div class="testimonials-author">Jason Robert</div>
                     </li>
                     
                     <!-- Testimonial -->
                     <li>
                       <img src="assets/images/temp/client-photo.jpg" alt="">
                       <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculusultricies porta posuere. <a href="#">http://goo.gl/1OhxkS</a>.</p>
-                      <div class="testimonials-author">Nelly Arsey - Web Designer</div>
+                      <div class="testimonials-author">Jiel Damina</div>
                     </li>
 
                   </ul>
@@ -874,11 +868,11 @@
           <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
               <ul class="footer-social-links">
-                <li><a href="#">Facebook</a></li>
+                <li><a href="#">LinkedIn</a></li>
                 <li><a href="#">Twitter</a></li>
                 <li><a href="#">Dribbble</a></li>
-                <li><a href="#">Behance</a></li>
-                <li><a href="#">Pinterest</a></li>
+                <li><a href="#">Reddit</a></li>
+                <li><a href="#">Quora</a></li>
               </ul>
               <!-- <p class="copyright">
                 &copy; 2016 Salient - Created By <a href="http://templatestock.co">Template Stock</a>
