--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
             <li><a href="#landing-offer">About</a></li>
             <li><a href="#features-section">Services</a></li>
             <li><a href="#team-section">Team</a></li>
-            <li><a href="#screenshots-section">Works</a></li>
-            <li><a href="#prices-section">Prices</a></li>
+            <li><a href="#prices-section">Press Release</a></li>
             <li><a href="#subscribe-section">Subscribe</a></li>
             <li><a href="#contact-section">Contact</a></li>
           </ul>
